update home-container margin to padding and fixed background image size issue-now covering full screen

--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,15 @@ body {
     background: 
     url('https://images.unsplash.com/photo-1618576980905-8b704806a39b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHBpbmslMjBkYXJrJTIwZ3JhZGllbnR8ZW58MHx8MHx8fDA%3D');
     background-size: cover;
-    background-repeat: no-repeat; 
-    /* color: white;
-    height: 100vh;
-    width: 100%; */
+    background-repeat: no-repeat;
+    height: 100%;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 .App {
-    /* background: 
-    url('https://images.unsplash.com/photo-1618576980905-8b704806a39b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHBpbmslMjBkYXJrJTIwZ3JhZGllbnR8ZW58MHx8MHx8fDA%3D');
-    background-size: cover;
-    background-repeat: no-repeat;  */
-    color: white;
-    height: 100vh;
-    width: 100%;
+    height: 100%;
+    padding: 0;
 }
 
