--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -61,7 +61,7 @@ nav .menu span{
     border-radius: 0.2rem;
 }
 
-@media (max-width: 968px) {
+@media (max-width: 992px) {
     nav .menu {
         display:flex;
     }
